crates/icydb-core/tests/ui/db_store_module_private.stderr
error[E0603]: module `data` is private
 --> tests/ui/db_store_module_private.rs:1:21
  |
1 | use icydb_core::db::data::DataStore;
  |                     ^^^^ private module
  |
note: the module `data` is defined here
 --> src/db/mod.rs
  |
  | pub(in crate::db) mod data;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
