crates/icydb-core/tests/ui/db_store_module_private.rs
use icydb_core::db::data::DataStore;

fn main() {}
